# lab06

./: CMakeLists.txt  README.md
.github/workflows/: auto_release.yml  cmake.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: .CMakeLists.txt.swp  CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
